# rhizome

./: .gitignore  CLAUDE.md  README.md  conftest.py  pyproject.toml
docs/: agent-workflows.md  design-principles.md  learn.md  resource-loader-state-cases.md  review.md
examples/: exercise_subagent.py
profiler-output/: browser-tab-to-topic-tree-inline-styles-updated.txt  browser-tab-to-topic-tree-inline-styles.txt  browser-tab-to-topic-tree.txt  browser-to-chat-input.txt
rhizome/: config.py  credentials.py
rhizome/agent/: CONTEXT.md  app_context.py  checkpointer.py  context.py  engine_events.py  factory.py  graph.py  guides.py  modes.py  root.py  session.py  state.py  streaming.py  subagents.py  system_prompt.py  topology.py
rhizome/agent_legacy/: CONTEXT.md  __init__.py  builder.py  config.py  context.py  guides.py  modes.py  session.py  system_prompt.py  utils.py
rhizome/agent_new/: CONTEXT.md  app_context.py  checkpointer.py  cleanup.py  context.py  factory.py  metadata.py  payload.py  prompt_engine.py  root.py  runtime.py  session.py  state.py  streaming.py
rhizome/app/: __init__.py  command_registry.py  commands.py  model.py  options.py  orchestrator.py  query.py  query_backed_model.py  query_backed_vm.py  sql_session.py  vm.py
rhizome/db/: CONTEXT.md  __init__.py  engine.py  models.py
rhizome/resources/: CONTEXT.md  __init__.py  auto_metadata.py  content.py  context_message.py  embeddings.py  index.py  ingest.py  manager.py  tree.py  vector_store.py
rhizome/tui/: app.py  (+4 more)
scripts/: dump_keybindings.py
tests/: test_flashcard_review_view_model.py
(+559 files in other folders)
