[project]
name = "rhizome"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "aiosqlite>=0.20.0",
    "rich>=14.3.2",
    "sqlalchemy[asyncio]>=2.0",
    "textual[syntax]>=8.2.1",
    "langchain==1.2.10",
    "langchain-core==1.2.14",
    "langgraph==1.0.9",
    "langchain-anthropic==1.3.3",
    "langchain-text-splitters==1.1.1",
    "langchain-voyageai==0.3.3",
    "pypdf>=6.9.2",
    "faiss-cpu>=1.13.2",
    "alembic>=1.18.4",
    "pymupdf>=1.27.2.2",
    "fsrs>=6.3.1",
    "pillow>=12.1.1",
    "numpy>=2.4.3",
]

[dependency-groups]
dev = [
    "eralchemy2>=1.4.1",
    "pyinstrument>=5.1.2",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
